--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,8 @@ input[type=submit] {
 @media screen and (max-width: 640px) {
   
   #main-container {
-    padding-top: 0px;
+    padding-top: 0px
+    ;
   }
 
   #top-bar {
