--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,11 @@ input[type=submit] {
 
 @media screen and (max-width: 768px)  {
 
+  #main-container {
+    position: relative;
+    left: 30px;
+  }
+
   .main-section {
     max-width: 600px;
   }
@@ -316,6 +321,8 @@ input[type=submit] {
   #main-container {
     padding-top: 0px
     ;
+    position: relative;
+    left: -20px;
   }
 
   #top-bar {
