--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ body {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 18px;
   line-height: 34px;
-  color: #777;
-  background: url("../images/vintage-concrete.png");
+  color: rgb(190, 188, 188);
+  background: url("../images/micro_carbon.png");
 }
 
 * {
@@ -36,6 +36,7 @@ h3 {
   font-family: 'David Libre', serif;
   font-weight: 700;
   color: #4aaaa5;
+  text-shadow: 1px 1px #1b1b1b;
 }
 
 h1 {
@@ -70,8 +71,7 @@ a:visited {
   margin: 0 0 30px;
   overflow: auto;
   color: #fff;
-  background: #fff;
-  border-bottom: 2px solid #ccc;
+  background: #666;
 }
 
 #logo {
@@ -122,11 +122,9 @@ footer {
   padding: 30px 0;
   clear: both;
   font-size: 12px;
-  color: #fff;
-  color: #ccc;
+  color: rgb(190, 188, 188);
   text-align: center;
   background: #666;
-  border-top: 8px solid #4aaaa5;
 }
 
 
@@ -138,8 +136,8 @@ footer {
   max-width: 270px;
   padding: 30px;
   margin-bottom: 20px;
-  background: #fff;
-  border: 1px solid #ddd;
+  background: hsla(0, 2%, 75%, 0.671);
+  border: 1px solid hsla(0, 1%, 13%, 0.342);
 }
 
 h3,
@@ -174,7 +172,7 @@ h3,
   max-width: 650px;
   padding: 30px;
   margin: 0 0 40px;
-  background: #fff;
+  background: hsla(0, 2%, 75%, 0.671);
   border: 1px solid #ddd;
 }
 
@@ -250,6 +248,7 @@ textarea {
 
 textarea {
   height: 200px;
+  padding: 10px;
 }
 
 input[type=submit] {
